@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-06-17T12:37:11Z",
-  "count_outdated" : 7831,
-  "uniques_outdated" : 3443,
+  "timestamp" : "2024-06-18T01:24:15Z",
+  "count_outdated" : 7846,
+  "uniques_outdated" : 3453,
   "count" : 8039,
   "uniques" : 3547,
   "clones" : [
     {
-      "timestamp": "2024-06-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 15 ],
-      "count_decinc": [ 14, 15 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 10 ],
-      "uniques_decinc": [ 9, 10 ]
-    },
-    {
       "timestamp": "2024-06-04T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 3, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
+      "count_decinc": [ 3, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 2, 3 ]
     },
     {
       "timestamp": "2024-06-05T00:00:00Z",
