@@ -1,16 +1,11 @@
 {
-  "count": 194,
+  "count": 190,
   "uniques": 76,
   "clones": [
     {
-      "timestamp": "2024-06-03T00:00:00Z",
+      "timestamp": "2024-06-04T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2024-06-04T00:00:00Z",
-      "count": 4,
-      "uniques": 3
     },
     {
       "timestamp": "2024-06-05T00:00:00Z",
